著作権表示

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -27,7 +27,7 @@
             {% block content %}{% endblock %}
         </main>
         <footer class="text-center mt-12 text-sm text-gray-400">
-            <p>&copy; 2024 Intelligent Seat Changer. All Rights Reserved.</p>
+            <p>&copy; 2025 YusukeEnomoto. All Rights Reserved.</p>
         </footer>
     </div>
     {% block scripts %}{% endblock %}
