最終確認画面を修正

--- a/templates/step4_roulette.html
+++ b/templates/step4_roulette.html
@@ -13,7 +13,7 @@
         </div>
         
         <!-- ルーレット表示エリア -->
-        <div id="roulette-display" class="hidden">
+        <div id="roulette-display" class="hidden w-full max-w-5xl">
              <div id="seat-map-container" class="grid gap-2" style="display: none;">
                 <!-- JavaScriptで座席が生成される -->
             </div>
